third_party/move/move-compiler-v2/tests/bytecode-generator/v1-typing/global_invalid.exp
// -- Model dump before first bytecode pipeline
module 0x42::m {
    private fun invalid<T>(addr: address) {
        if exists<T>(addr) {
          Tuple()
        } else {
          Abort(0)
        };
        {
          let _: &T = BorrowGlobal(Immutable)<T>(addr);
          MoveFrom<T>(addr);
          Tuple()
        }
    }
} // end 0x42::m

// -- Sourcified model before first bytecode pipeline
module 0x42::m {
    fun invalid<T: drop + key>(addr: address) {
        if (exists<T>(addr)) () else abort 0;
        let _ = borrow_global<T>(addr);
        move_from<T>(addr);
    }
}


Diagnostics:
error: Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found: 'T'
  ┌─ tests/bytecode-generator/v1-typing/global_invalid.move:4:17
  │
4 │         assert!(exists<T>(addr), 0);
  │                 ^^^^^^^^^^^^^^^
  │                 │
  │                 Invalid call to exists<T>.

error: Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found: 'T'
  ┌─ tests/bytecode-generator/v1-typing/global_invalid.move:5:17
  │
5 │         let _ = borrow_global<T>(addr);
  │                 ^^^^^^^^^^^^^^^^^^^^^^
  │                 │
  │                 Invalid call to BorrowGlobal(Immutable)<T>.

error: Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found: 'T'
  ┌─ tests/bytecode-generator/v1-typing/global_invalid.move:6:9
  │
6 │         move_from<T>(addr);
  │         ^^^^^^^^^^^^^^^^^^
  │         │
  │         Invalid call to MoveFrom<T>.
