third_party/move/move-compiler-v2/tests/bytecode-generator/v1-typing/global_invalid.move
module 0x42::m {

    fun invalid<T:key + drop>(addr: address) {
        assert!(exists<T>(addr), 0);
        let _ = borrow_global<T>(addr);
        move_from<T>(addr);
    }

}
